// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: ActionList Anchorpoints onClick prevents default 1`] = `
<Fragment>
  <h2
    id="anchorpoints"
  >
    Anchorpoints
  </h2>
  <p>
    You can change where the action list will have its anchor, by default the anchor will be top right.
  </p>
  <h3>
    Top left
  </h3>
  <p>
    Use class 
    <code
      className="token property"
    >
      .anchor-top-left
    </code>
     to anchor action-list button to the top left corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list anchor-top-left"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
  <h3>
    Bottom right
  </h3>
  <p>
    Use class 
    <code
      className="token property"
    >
      .anchor-bottom-right
    </code>
     to anchor action-list button to the bottom right corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list anchor-bottom-right"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
  <h3>
    Bottom left
  </h3>
  <p>
    Use class 
    <code
      className="token property"
    >
      .anchor-bottom-left
    </code>
     to anchor action-list button to the bottom left corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list anchor-bottom-left"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: ActionList Anchorpoints renders 1`] = `
<Fragment>
  <h2
    id="anchorpoints"
  >
    Anchorpoints
  </h2>
  <p>
    You can change where the action list will have its anchor, by default the anchor will be top right.
  </p>
  <h3>
    Top left
  </h3>
  <p>
    Use class 
    <code
      className="token property"
    >
      .anchor-top-left
    </code>
     to anchor action-list button to the top left corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list anchor-top-left"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
  <h3>
    Bottom right
  </h3>
  <p>
    Use class 
    <code
      className="token property"
    >
      .anchor-bottom-right
    </code>
     to anchor action-list button to the bottom right corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list anchor-bottom-right"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
  <h3>
    Bottom left
  </h3>
  <p>
    Use class 
    <code
      className="token property"
    >
      .anchor-bottom-left
    </code>
     to anchor action-list button to the bottom left corner of the menu.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list anchor-bottom-left"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: ActionList Overview onClick prevents default 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Action lists.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: ActionList Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Action lists.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="action-list"
    >
      

      <Icon
        icon="more_vert"
      />
      

      <div
        className="action-menu"
      >
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="bookmark"
          />
          Add bookmark
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="business_center"
          />
          Add client
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="add_circle"
          />
          Add document
        </a>
        

        <a
          href="#"
          onClick={[Function]}
        >
          <Icon
            icon="person_add"
          />
          Add user
        </a>
        

      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: ActionList renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Action lists are small menus that remain hidden until clicked. In these you can put page links or anchors that trigger an action elsewhere.
  </p>
  <Overview />
  <Anchorpoints />
  <JavascriptMethods />
</DocContainer>
`;
